--- a/src/app/administration/quartiers/list-quartiers/list-quartiers.component.html
+++ b/src/app/administration/quartiers/list-quartiers/list-quartiers.component.html
@@ -1,2 +1,2 @@
-<app-skelleton *ngIf="load" [table]="['Noms', 'Role']" title="Liste Des Quartiers"></app-skelleton>
-<app-generic-table [columns]="tableColumns" *ngIf="!load" [fields]="formsFields" [data]="tableData" titlePage="Liste des Quartiers"></app-generic-table>
+<app-skelleton *ngIf="load" [table]="['Libelle']" title="Liste Des Quartiers"></app-skelleton>
+<app-generic-table  [columns]="tableColumns"  (customsEvent)="event($event)" option="CRUD"  [fields]="formsFields" *ngIf="!load" [data]="tableData" titlePage="Liste des Quartiers"></app-generic-table>
